Changed some of the build stuff so version strings are all #define'd via the build system

--- a/config.in.tmpl
+++ b/config.in.tmpl
@@ -185,6 +185,9 @@
 /* Version number of package */
 #undef VERSION
 
+/* Extra version string */
+#undef VERSION_EXTRA
+
 /* Define to `__inline__' or `__inline' if that's what the C compiler
    calls it, or to nothing if 'inline' is not supported under any name.  */
 #ifndef __cplusplus
@@ -211,3 +214,6 @@
 
 /* Define as `fork' if `vfork' does not work. */
 #undef vfork
+
+/* Git Version value */
+#define VERSION_GIT "release"
