Fixed segmentation fault handler exiting on module segfaults, instead it restores the stack prior to the crash and unloads the module

--- a/config.in.tmpl
+++ b/config.in.tmpl
@@ -81,8 +81,8 @@
 /* Define to 1 if you have the `select' function. */
 #undef HAVE_SELECT
 
-/* Define to 1 if you have the <setjump.h> header file. */
-#undef HAVE_SETJUMP_H
+/* Define to 1 if you have the <setjmp.h> header file. */
+#undef HAVE_SETJMP_H
 
 /* Define to 1 if you have the `socket' function. */
 #undef HAVE_SOCKET
